--- a/gleam.toml
+++ b/gleam.toml
@@ -14,6 +14,9 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
+dot_env = ">= 1.2.0 and < 2.0.0"
+gleam_httpc = ">= 4.1.1 and < 5.0.0"
+gleam_json = ">= 3.0.1 and < 4.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
